# python-tool-competition-2024-pytgen

./: .pre-commit-config.yaml  README.md  pyproject.toml
python_tool_competition_2024_pytgen/: generator.py
