[tool.poetry]
name = "python-tool-competition-2024-pytgen"
version = "0.1.0"
description = "Python Tool Competition 2024 implementation using pytgen"
authors = ["Dominik Frey <dominik.frey13@gmail.com>"]
license = "Creative Commons Zero v1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-tool-competition-2024 = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."python_tool_competition_2024.test_generators"]
pytgen = "python_tool_competition_2024_pytgen.generator:PytgenTestGenerator"
